drkns 03.08.2018 00:28:15 +0100 - build 5252

1. Уточнение 5248.

drkns 02.08.2018 19:06:57 +0100 - build 5251

1. Уточнение 5250.2.

drkns 02.08.2018 18:08:20 +0100 - build 5250

1. Рефакторинг.

2. Несколько мелких оптимизаций в работе с sqlite.

zg 02.08.2018 18:54:18 +0300 - build 5249

1. уточнение 5242.1, если панель закрывается внутри GetFilesW и DeleteFilesW.

drkns 01.08.2018 15:04:37 +0100 - build 5248

1. Рефакторинг.

drkns 25.07.2018 00:21:37 +0100 - build 5247

1. Уточнение 5240.

2. Рефакторинг.

drkns 23.07.2018 23:54:41 +0100 - build 5246

1. Продолжение 5211.1. Должны снова работать ассоциации типа !.! в архивах.

zg 24.07.2018 00:57:09 +0300 - build 5245

1. уточнение 5242.1, если панель закрывается внутри GetFindDataW.

drkns 23.07.2018 20:05:28 +0100 - build 5244

1. Мелкий рефакторинг на тему строк и строковых литералов.

drkns 22.07.2018 23:02:33 +0100 - build 5243

1. UUID адаптера проверяется при загрузке, дубликаты игнорируются.

2. clang & gcc warnings.

3. Немного переименований.

zg 22.07.2018 16:11:54 +0300 - build 5242

1. FCTL_CLOSEPANEL синхронно закрывает панель.

2. gcc warnings.

drkns 21.07.2018 18:41:29 +0100 - build 5241

1. Почему-то нельзя было ввести нулевой символ в комстроку.

2. Строки с нулевыми символами правильно добавлялись в дб, но неправильно извлекались.

drkns 20.07.2018 23:07:50 +0100 - build 5240

1. Уточнения получения строк через winapi-функции.

drkns 16.07.2018 18:30:13 +0100 - build 5239

1. Уточнение 5238.2.

drkns 15.07.2018 14:42:42 +0100 - build 5238

1. Новые версии tinyxml2 и fmt.

2. Используемые адаптеры показываются в far:about.

drkns 14.07.2018 20:45:49 +0100 - build 5237

1. Clang warnings.

2. Использованный компилятор показывается в far:about.

drkns 08.07.2018 14:29:41 +0100 - build 5236

1. Улучшения в обработке исключительных ситуаций.

2. Рефакторинг.

drkns 07.07.2018 14:31:27 +0100 - build 5235

1. Уточнение 5215.

drkns 29.06.2018 20:49:29 +0100 - build 5234
